--- a/desafios/ProjetoFinalHtml/index.html
+++ b/desafios/ProjetoFinalHtml/index.html
@@ -16,14 +16,14 @@
 			<tr>
 				<td height="90px"><img src="imagens/logo.png"></td>
 				<td align="right">
-				<a href="">Home</a> |
+				<a href="index.html">Home</a> |
 				<a href="quem-somos.html">Quem somos</a> |
 				<a href="contato.html">Contato</a>
 				</td>
 
 			</tr>
 
-			<tr background="white">
+			<tr>
 				<td colspan="2">
 					<img src="imagens/capa.png">
 				</td>
