Teste github pc novo

--- a/desafios/testes/34.html
+++ b/desafios/testes/34.html
@@ -4,11 +4,25 @@
 	<head>
 		<meta charset="utf-8">
 		<title>34</title>
+		<style>	
+		
+			div {
+				width: 500px;
+				height: 500px;
+				margin: 50px auto 0 auto;
+			}
+
+			td {
+				text-align: center;
+				font-size: 50px;
+			}
+
+		</style>
 	</head>
 
 	<body>
-
-		<table border="2px" width="500px" height="500px" font-size="16px">
+		<div>
+		<table border="2px" width="500px" height="500px">
 			<tr>
 				<td>16</td>
 				<td>3</td>
@@ -37,7 +51,7 @@
 				<td>1</td>
 			</tr>
 		</table>
-
+		</div>
 
 	</body>
 
